Update topic management page.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#" id="menu-topic-management">주제 관리</a></li>
-                <li><a href="#" id="menu-paper-search">논문 검색</a></li>
-                <li><a href="#" id="menu-paper-analysis">논문 분석</a></li>
+                <li><a href="#" id="menu-topic-management">Topic Management</a></li>
+                <li><a href="#" id="menu-paper-search">Paper Search</a></li>
+                <li><a href="#" id="menu-paper-analysis">Paper Analysis</a></li>
             </ul>
         </nav>
     </header>
     <main id="content">
-        <!-- 콘텐츠가 여기에 표시됩니다 -->
+        <!-- Content will be displayed here -->
     </main>
     <script src="script.js"></script>
 </body>
