--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>arxivjs</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\(', '\)']]
+            },
+            svg: {
+                fontCache: 'global'
+            }
+        };
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <header>
@@ -12,6 +24,7 @@
             <ul>
                 <li><a href="#" id="menu-topic-management">Topic Management</a></li>
                 <li><a href="#" id="menu-paper-search">Paper Search</a></li>
+                <li><a href="#" id="menu-paper-list">Paper List</a></li>
                 <li><a href="#" id="menu-paper-analysis">Paper Analysis</a></li>
             </ul>
         </nav>
