Update css. Add Korean fonts.

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,10 @@
                         <td id="paper-detail-info-table-url"></td>
                     </tr>
                     <tr>
-                        <th>Abstract</th>
+                        <th>Abstract
+                            <button id="hide-abstract">Hide</button>
+                            <button id="show-abstract">Show</button>
+                        </th>
                         <td id="paper-detail-info-table-abstract" colspan="7"></td>
                     </tr>
                     <tr>
