Update README. Add loading message.

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,7 @@
                 <tbody>
                 </tbody>
             </table>
+            <div id="search-loading-message"></div>
         </div>
         <div id="paper-detail-view">
             <table id="paper-detail-info-table" border="1" cellspacing="0" cellpadding="6">
