Add count to search query.

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,12 @@
                 <input type="text" id="search-keyword" placeholder="Search keyword">
                 <label for="search-year">Year:</label>
                 <select id="search-year"></select>
+                <label for="search-count">Count:</label>
+                <select id="search-count">
+                    <option value="200">200</option>
+                    <option value="500">500</option>
+                    <option value="1000">1000</option>
+                </select>
                 <button type="submit">Search</button>
             </form>
             <table id="search-results-table">
