--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,11 @@
                         <option value="500">500</option>
                         <option value="1000">1000</option>
                     </select>
+                    <label for="search-sort">Sort by:</label>
+                    <select id="search-sort">
+                        <option value="relevance">Relevance</option>
+                        <option value="submittedDate">Year</option>
+                    </select>
                     <button type="submit">Search</button>
                 </form>
                 <div id="search-paper-container">
