Update theme order.

--- a/public/index.html
+++ b/public/index.html
@@ -183,14 +183,14 @@
                 <div class="theme-selector">
                     <label for="theme-select">Choose Theme:</label>
                     <select id="theme-select">
-                        <option value="blue">Blue</option>
-                        <option value="red" selected>Red</option>
+                        <option value="red">Red</option>
                         <option value="green">Green</option>
+                        <option value="blue">Blue</option>
                         <option value="ocean">Ocean</option>
-                        <option value="winter">Winter</option>
                         <option value="spring">Spring</option>
                         <option value="summer">Summer</option>
                         <option value="autumn">Autumn</option>
+                        <option value="winter" selected>Winter</option>
                     </select>
                 </div>
             </div>
