Add more themes.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>arxivjs</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="theme-red.css">
+    <link rel="stylesheet" id="theme-loader" href="theme/theme-red.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -186,11 +186,37 @@
                         <option value="red">Red</option>
                         <option value="green">Green</option>
                         <option value="blue">Blue</option>
-                        <option value="ocean">Ocean</option>
+                        <option value="classic">---</option>
                         <option value="spring">Spring</option>
                         <option value="summer">Summer</option>
                         <option value="autumn">Autumn</option>
                         <option value="winter" selected>Winter</option>
+                        <option value="classic">---</option>
+                        <option value="classic">Classic</option>
+                        <option value="modern">Modern</option>
+                        <option value="minimal">Minimal</option>
+                        <option value="academic">Academic</option>
+                        <option value="research">Research</option>
+                        <option value="journal">Journal</option>
+                        <option value="classic">---</option>
+                        <option value="amber">Amber</option>
+                        <option value="amethyst">Amethyst</option>
+                        <option value="coral">Coral</option>
+                        <option value="crimson">Crimson</option>
+                        <option value="emerald">Emerald</option>
+                        <option value="ivory">Ivory</option>
+                        <option value="ocean">Ocean</option>
+                        <option value="sapphire">Sapphire</option>
+                        <option value="slate">Slate</option>
+                        <option value="classic">---</option>
+                        <option value="morning">Morning</option>
+                        <option value="midday">Midday</option>
+                        <option value="evening">Evening</option>
+                        <option value="midnight">Midnight</option>
+                        <option value="twilight">Twilight</option>
+                        <option value="aurora">Aurora</option>
+                        <option value="moonlight">Moonlight</option>
+                        <option value="starlight">Starlight</option>
                     </select>
                 </div>
             </div>
