--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script>
+        // Configure PDF.js worker
+        window.pdfjsLib = window['pdfjs-dist/build/pdf'] || window.pdfjsLib;
+        if (window.pdfjsLib) {
+            window.pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+        }
+        
         MathJax = {
             tex: {
                 inlineMath: [['$', '$']]
@@ -60,6 +67,16 @@
                             <line x1="16" y1="40" x2="42" y2="40" />
                             <line x1="16" y1="46" x2="38" y2="46" />
                         </svg> <span>Paper Detail</span></a></li>
+                <li><a href="#" id="pdf-summary-menu">
+                        <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="silver"
+                            stroke-width="3" width="1em">
+                            <rect x="8" y="12" width="32" height="40" rx="2" fill="none" stroke="gray" />
+                            <rect x="24" y="20" width="32" height="32" rx="2" fill="none" stroke="silver" />
+                            <line x1="28" y1="28" x2="48" y2="28" />
+                            <line x1="28" y1="34" x2="48" y2="34" />
+                            <line x1="28" y1="40" x2="44" y2="40" />
+                            <line x1="28" y1="46" x2="40" y2="46" />
+                        </svg> <span>PDF Summary</span></a></li>
                 <li><a href="#" id="option-menu">
                         <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="silver"
                             stroke-width="4" width="1em">
@@ -168,11 +185,59 @@
             <div id="splitter-container">
                 <div id="summary-view" class="splitter-panel">
                     <button id="summarize-button">Summarize</button>
-                    <div id="summary-content"></div>
+                    <div id="summary-content" class="content-viewer"></div>
                 </div>
                 <div id="splitter"></div>
                 <div id="pdf-view" class="splitter-panel">
                     <iframe title="PDF view frame" id="pdf-view-frame" width="100%" height="100%"></iframe>
+                </div>
+            </div>
+        </div>
+        <div id="pdf-summary-view">
+            <h2>PDF Summary</h2>
+            <div id="pdf-summary-controls">
+                <div class="pdf-method-selection">
+                    <label>
+                        <input type="radio" name="pdf-method" value="url" id="pdf-method-url" checked>
+                        PDF URL
+                    </label>
+                    <label>
+                        <input type="radio" name="pdf-method" value="file" id="pdf-method-file">
+                        Upload PDF
+                    </label>
+                </div>
+                <div class="pdf-input-section" id="pdf-url-section">
+                    <label for="pdf-url-input">PDF URL:</label>
+                    <input type="text" id="pdf-url-input" placeholder="Enter PDF URL" />
+                </div>
+                <div class="pdf-upload-section" id="pdf-file-section" style="display: none;">
+                    <label for="pdf-file-input">Upload PDF:</label>
+                    <input type="file" id="pdf-file-input" accept=".pdf" />
+                </div>
+                <div class="pdf-action-section">
+                    <button id="pdf-summarize-button" type="button">Summarize</button>
+                </div>
+            </div>
+            <div id="pdf-summary-content" class="content-viewer"></div>
+            <div id="pdf-save-section" style="display: none;">
+                <h3>Save Paper Information</h3>
+                <div class="pdf-save-form">
+                    <div class="pdf-save-field">
+                        <label for="pdf-paper-title">Title:</label>
+                        <input type="text" id="pdf-paper-title" placeholder="Enter paper title" />
+                    </div>
+                    <div class="pdf-save-field">
+                        <label for="pdf-paper-authors">Authors:</label>
+                        <input type="text" id="pdf-paper-authors" placeholder="Enter authors" />
+                    </div>
+                    <div class="pdf-save-field">
+                        <label for="pdf-paper-year">Year:</label>
+                        <input type="number" id="pdf-paper-year" placeholder="Enter year" min="1900" max="2099" />
+                    </div>
+                    <div class="pdf-save-actions">
+                        <button id="pdf-save-button" type="button">Save</button>
+                        <button id="pdf-cancel-save-button" type="button">Cancel</button>
+                    </div>
                 </div>
             </div>
         </div>
