Add batch mode.

--- a/public/index.html
+++ b/public/index.html
@@ -139,8 +139,8 @@
                         <button type="submit">Search</button>
                     </form>
                     <form id="add-paper-by-url-form">
-                        <label for="paper-url">URL:</label>
-                        <input type="text" id="paper-url" placeholder="Enter paper URL">
+                        <label for="paper-url-input">URL:</label>
+                        <input type="text" id="paper-url-input" placeholder="Enter paper URL">
                         <button type="submit">Add</button>
                     </form>
                 </div>
