--- a/arxiview/index.html
+++ b/arxiview/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArxiView - Paper Reader</title>
+    
+    <!-- Edge Immersive Reader Support -->
+    <meta name="description" content="A read-only interface for browsing and viewing research papers and AI-generated summaries" />
+    <meta name="author" content="ArxiView" />
+    <meta property="og:title" content="ArxiView - Paper Reader" />
+    <meta property="og:description" content="Browse and read research papers with AI-generated summaries" />
+    <meta property="og:type" content="article" />
+    <meta property="article:author" content="ArxiView" />
+    
+    <!-- Schema.org markup for better content understanding -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "ArxiView",
+      "description": "A read-only interface for browsing and viewing research papers and AI-generated summaries",
+      "applicationCategory": "EducationalApplication"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
